--- a/TravelMate/src/main/webapp/assets/css/mainStyle.css
+++ b/TravelMate/src/main/webapp/assets/css/mainStyle.css
@@ -164,3 +164,52 @@ main {
             cursor: pointer;
             float: right;
         }
+        
+        #planFormModal {
+    display: block;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 10;
+}
+
+#planFormModal .modal-content {
+	position: absolute;
+	top: 20%;
+	left: 40%;
+   	max-width: 400px; 
+    width: 90%; 
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 8px;
+    text-align: center;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+/* 여행 계획 모달 내부의 입력 요소 스타일 */
+#planFormModal input[type="text"],
+#planFormModal input[type="date"],
+#planFormModal textarea {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+#planFormModal button {
+    width: 100%;
+    padding: 10px;
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+}
+        
