--- a/TravelMate/src/main/webapp/assets/css/header.css
+++ b/TravelMate/src/main/webapp/assets/css/header.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     color: #4a4a4a;
-    background-color: #e0ebf4;
+    background-color:white;
     margin: 0;
     padding: 0;
     text-align: center;
