--- a/TravelMate/src/main/webapp/assets/css/reviewForm_style.css
+++ b/TravelMate/src/main/webapp/assets/css/reviewForm_style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     color: #4a4a4a;
-    background-color: #e0ebf4;
+    background-color: white;
     margin: 0;
     padding: 0;
     text-align: center;
@@ -74,12 +74,14 @@ input[type="date"],
 textarea,
 input[type="file"] {
     width: 100%;
-    padding: 10px;
+    padding: 10px 15px; /* 좌우에 패딩 추가 */
     margin-bottom: 20px;
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 1rem;
+    box-sizing: border-box; /* 패딩이 요소의 너비에 포함되도록 설정 */
 }
+
 
 textarea {
     height: 100px;
