--- a/TravelMate/src/main/webapp/assets/css/postView.css
+++ b/TravelMate/src/main/webapp/assets/css/postView.css
@@ -155,15 +155,15 @@ a { text-decoration:none }
     margin-bottom: 10px;
 }
 
-.comment-input {
+/*.comment-input {
     width: 100%;
     height: 100px;
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 4px;
     resize: none;
-    box-sizing: border-box; /* padding과 border를 너비에 포함 */
-}
+    box-sizing: border-box; /* padding과 border를 너비에 포함 
+}*/
 
 .comment-counter {
     text-align: right;
@@ -184,12 +184,13 @@ a { text-decoration:none }
 /* Comment Actions */
 .comment-actions {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: flex-end;
+    align-items: right;
     margin-top: 5px;
 }
 
 .submit-comment {
+	
     background-color: #4CAF50;
     color: white;
     padding: 5px 10px;
@@ -200,5 +201,5 @@ a { text-decoration:none }
 }
 
 .submit-comment:hover {
-    background-color: #45a049;
+    background-color: yellow;
 }
