--- a/TravelMate/src/main/webapp/assets/css/postView.css
+++ b/TravelMate/src/main/webapp/assets/css/postView.css
@@ -187,19 +187,21 @@ a { text-decoration:none }
     justify-content: flex-end;
     align-items: right;
     margin-top: 5px;
+    margin-right: auto;
 }
 
 .submit-comment {
-	
-    background-color: #4CAF50;
-    color: white;
-    padding: 5px 10px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+	background-color: #4CAF50;
+	color: white;
+	padding: 5px 10px;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+	transition: background-color 0.3s ease;
 }
 
 .submit-comment:hover {
-    background-color: yellow;
+    background-color: #8CFA05;
 }
+
+
