--- a/TravelMate/src/main/webapp/assets/css/kb_style.css
+++ b/TravelMate/src/main/webapp/assets/css/kb_style.css
@@ -4,12 +4,12 @@
 
 body {
     font-family: Arial, sans-serif;
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
     align-items: center;
     margin: 0;
     padding: 20px;
-    background-color: #f4f6f9;
+   /*  background-color: #f4f6f9; */
 }
 
 .kanban-board {
