--- a/TravelMate/src/main/webapp/assets/css/kb_sub_style.css
+++ b/TravelMate/src/main/webapp/assets/css/kb_sub_style.css
@@ -37,7 +37,7 @@ label {
     font-weight: bold;
 }
 
-select, input[type="time"], input[type="text"], textarea {
+select, input[type="date"], input[type="text"], textarea {
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
@@ -79,6 +79,10 @@ textarea {
     align-items: center;
 }
 
+.poll-option {
+    margin-bottom: 10px;
+}
+
 #voting-section h3 {
     margin-bottom: 10px;
     color: #8E9775;
@@ -96,7 +100,7 @@ textarea {
     font-size: 16px;
 }
 
-button[onclick="addVoteOption()"], button[onclick="startVoting()"], #complete-vote-btn {
+button[onclick="addVoteOption()"], button[onclick="startVoting()"], #complete-vote-btn, button[onclick="cancelVoting()"] {
     padding: 8px;
     width: 80%;
     margin: 5px 0;
@@ -108,6 +112,21 @@ button[onclick="addVoteOption()"], button[onclick="startVoting()"], #complete-vo
     font-weight: bold;
 }
 
-button[onclick="addVoteOption()"]:hover, button[onclick="startVoting()"]:hover, #complete-vote-btn:hover {
+button[onclick="addVoteOption()"]:hover, button[onclick="startVoting()"]:hover, #complete-vote-btn:hover, button[onclick="cancelVoting()"]:hover {
     background-color: #FFA726;
 }
+
+.delete-btn {
+    margin-left: 10px;
+    padding: 5px 10px;
+    background-color: #FF7043;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.delete-btn:hover {
+    background-color: #FF5722;
+}
+
