--- a/TravelMate/src/main/webapp/assets/css/kb_sub_style.css
+++ b/TravelMate/src/main/webapp/assets/css/kb_sub_style.css
@@ -9,6 +9,8 @@ body {
     height: 100vh;
 }
 
+
+
 .container {
     width: 350px;
     padding: 20px;
@@ -114,6 +116,17 @@ button[onclick="addVoteOption()"], button[onclick="startVoting()"], #complete-vo
 
 button[onclick="addVoteOption()"]:hover, button[onclick="startVoting()"]:hover, #complete-vote-btn:hover, button[onclick="cancelVoting()"]:hover {
     background-color: #FFA726;
+}
+
+a[onclick="openDetailPage()"] {
+	padding: 10px;
+	position: relative;
+	top: 1px;
+	left: 130px;
+	bottom:300px;
+    color: #5C5346;
+    border-radius: 10px;
+    cursor: pointer;
 }
 
 .delete-btn {
