칸반보드 헤더 추가 및 가운데 일정 정렬, 메인, 헤더 css 수정 - 박준엽(11/11 16:40)

--- a/TravelMate/src/main/webapp/assets/css/mainStyle.css
+++ b/TravelMate/src/main/webapp/assets/css/mainStyle.css
@@ -53,9 +53,9 @@ main {
     cursor: pointer; /* 마우스 커서 포인터 */
     transition: all 0.3s ease; /* 부드러운 전환 효과 */
     
-    position: fixed;
-    right: 17.2%;
-    bottom: 32.6%;
+    position: relative;
+    left: 25.25%;
+    bottom: 83.5px;
 }
 
 /* 마우스 올렸을 때 역동적인 효과 */
