--- a/TravelMate/src/main/webapp/assets/css/header.css
+++ b/TravelMate/src/main/webapp/assets/css/header.css
@@ -16,7 +16,7 @@ a { text-decoration:none }
     align-items: center;
     padding: 10px 20px;
     background-color: beige;
-    max-width: 1200px; /* 최대 넓이 제한 */
+    width: 1200px; /* 최대 넓이 제한 */
     margin: 0 auto;    /* 화면 가운데 정렬 */
     border: 2px solid #b08584; /* 두께, 스타일, 색상 */
     border-radius: 10px; /* 테두리의 모서리를 둥글게 (옵션) */
