--- a/TravelMate/src/main/webapp/assets/css/kb_sub_style.css
+++ b/TravelMate/src/main/webapp/assets/css/kb_sub_style.css
@@ -39,7 +39,7 @@ label {
     font-weight: bold;
 }
 
-select, input[type="date"], input[type="text"], textarea {
+select, input[type="time"], input[type="text"], textarea {
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
