--- a/TravelMate/src/main/webapp/assets/css/kb_style.css
+++ b/TravelMate/src/main/webapp/assets/css/kb_style.css
@@ -29,7 +29,8 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
+    height: 100%
 }
 
 .kanban-column h2 {
@@ -75,15 +76,14 @@ body {
 button {
     width: 100%;
     padding: 5px;
-    margin-top: 10px;
-    background-color: #007bff;
+    margin-top: 10px;    background-color: #a59493;
     color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
 }
 
-.delete-button { 
+.delete-card-button { 
     width: 50px; /* 원하는 너비 */
     /* background-color: transparent; */
     border: none;
@@ -104,7 +104,7 @@ button:hover {
     width: 50px; /* 원하는 너비 */
     background-color: transparent;
     border: none;
-    color: #ff5e5e; /* 하트 색상 */
+    color: #837676; /* 하트 색상 */
     cursor: pointer;
     font-size: 1.2em;
     display: flex;
@@ -199,7 +199,7 @@ button:hover {
 #add-comment {
     align-self: flex-end;
     padding: 8px 12px;
-    background-color: #007bff;
+    /* background-color: #a59493; */
     color: white;
     border: none;
     border-radius: 4px;
@@ -207,7 +207,7 @@ button:hover {
 }
 
 #add-comment:hover {
-    background-color: #0056b3;
+    background-color: #a59493;
 }
 
 .like-button {
