진짜 최종본 - 김의진

--- a/TravelMate/src/main/webapp/assets/css/kb_style.css
+++ b/TravelMate/src/main/webapp/assets/css/kb_style.css
@@ -33,6 +33,11 @@ body {
     height: 100%
 }
 
+.delete-icon{
+	width: 20px;
+	height: 20px;
+}
+
 .kanban-column h2 {
     text-align: center;
     color: #333;
